tests/golden/parse_errors/lambda_missing_body.cd
let f = fun (x) return x;
